# example-platform-dotnet-pipeline

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .talismanrc  Pipfile  azure-consumer-pipelines.yml  azure-pipelines.yml  pyproject.toml
consumer/jobs/: build.yml  deploy-http-stub-server-to-aca.yml  deploy-to-aca.yml  deploy-to-aks.yml  integration-tests.yml
consumer/stages/: build-and-push.yml  dev.yml  prod.yml
consumer/steps/: Dockerfile  aca_readiness_check.sh  build_consumer_application.sh  build_docker_consumer_image.sh  deploy_to_aks.sh  run_integration_tests.sh  run_unit_tests.sh
consumer/steps/dotnet/: run_dotnet_build.sh  run_dotnet_command.sh  run_dotnet_integration_test.sh  run_dotnet_unit_test.sh
consumer/steps/helm/: helm_upgrade.sh
consumer/terraform/: main.tf  providers.tf  terraform.tfvars  variables.tf
docker/application/: Dockerfile
docker/base-application/: Dockerfile
docker/base_dotnet_command/: Dockerfile
docker/dockerfile_linting/: Dockerfile
docker/helm/: Dockerfile
docker/http_stub_server_proxy/: nginx.conf
docker/http_stubbing/: Dockerfile
docker/http_stubbing_proxy/: Dockerfile
docker_base_images/shell_linting/: Dockerfile
platform/steps/: build_docker_base_images.sh  dockerfile_linting.sh  hadolint.sh  push_docker_base_images.sh  shell_linting.sh  shellcheck.sh
tests/: test_build_consumer_application.py  test_build_docker_base_images.py  test_build_docker_consumer_image.py  test_dockerfile_linting.py  test_run_unit_tests.py  test_shell_linting.py
tests/app/: Consumer
(+35 files in other folders)
